[package]
name = "plasma-chamber"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[lib]
path = "plasma-chamber/lib.rs"

[[bin]]
path = "plasma-chamber/main.rs"
name = "plasma-chamber"

[workspace]
members = [
	"android",
	"client",
	"core",
	"db",
	"operator",
	"predicate-plugins",
	"sum_merkle_tree",
  "event-watcher"
]

[dependencies]

clippy = {version = "*", optional = true}
plasma-operator = { path = "./operator" }
