[package]
name = "plasma_core_android_lib"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
jni = { version = "0.10.2", default-features = false }
plasma-core = { path="../core" }
bytes = "0.4.12"
rlp = "0.4.0"
ethereum-types = "^0.5.2"


[profile.release]
lto = true

[lib]
name = "plasma_core_android_lib"
crate-type = ["cdylib"]
