[package]
name = "plasma-client"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
ethabi = "7.0.0"
ethereum-types = "^0.5.2"
failure = "0.1.5"
plasma-core = { path = "../core" }
plasma-db = { path = "../db" }
predicate-plugins = { path = "../predicate-plugins" }
