[package]
name = "plasma-db"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
tempdir = "0.3.7"
kvdb = "0.1.0"
kvdb-memorydb = "0.1.0"
rlp = "0.4.0"

[dependencies.kvdb-rocksdb]
version = "0.1.4"
optional = true

[features]
linux = ["kvdb-rocksdb"]
android = ["kvdb-rocksdb"]
