[package]
name = "plasma-operator"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.1"
failure = "0.1.5"
plasma-core = { path = "../core" }
jsonrpc-core = "11.0.0"
jsonrpc-http-server = "11.0.0"
jsonrpc-derive = "11.0.0"
jsonrpc-core-client = "11.0.0"
log = "0.4.6"
serde = "1.0.91"
serde_derive = "1.0.91"
