[package]
name = "plasma-operator"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
env_logger = "0.6.1"
ethereum-types = "0.4"
failure = "0.1.5"
hex = "0.3.1"
plasma-core = { path = "../core" }
jsonrpc-core = "11.0.0"
jsonrpc-http-server = "11.0.0"
jsonrpc-derive = "11.0.0"
jsonrpc-core-client = "11.0.0"
log = "0.4.6"
rlp = "0.3.0"
serde = "1.0.91"
serde_derive = "1.0.91"
parking_lot = "0.8.0"