[package]
name = "predicate-plugins"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
ethabi = { git = 'https://github.com/cryptoeconomicslab/ethabi', branch = 'tuple-support' }
ethereum-types = "^0.5.2"
primitive-types = "0.3.0"
plasma-core = { path = "../core" }
